src/ui/controls/volume/volume.scss
@import '../../shared';


$color: white !default;

.volume-level {
  position: absolute;
  z-index: 1;
  top: 50%;
  left: 0;

  width: 100%;
  height: 2px;
  margin: -1px 0 0;
  padding: 0;

  transition: none;
  vertical-align: top;

  color: $color;
  border: none;
  background: $video-progress-bg;

  appearance: none;

  &::-webkit-progress-bar {
    background: transparent;
  }
  &::-webkit-progress-value {
    min-width: 2px;
    max-width: 99%;

    transition: none;

    background: currentColor;
  }
  &::-moz-progress-bar {
    min-width: 2px;
    max-width: 99%;

    transition: none;

    background: currentColor;
  }
  &::-ms-fill {
    display: none;

    border: none;
  }
}

.volume-control {
  position: relative;

  display: flex;

  width: 12px;
  max-width: 12px;
  margin: 0 23px 0 15px;

  justify-content: center;
  align-items: center;

  input[type='range'] {
    position: relative;
    z-index: 2;

    &::-webkit-slider-thumb {
      width: 12px;
      height: 12px;
      margin-top: -1px;

      -webkit-appearance: none;
    }

    &::-webkit-slider-runnable-track {
      background: transparent;
    }

    &::-moz-range-thumb {
      width: 12px;
      height: 12px;
    }

    &::-moz-range-track {
      background: transparent;
    }

    &::-ms-fill-upper {
      background: transparent;
    }

    &::-ms-thumb {
      width: 12px;
      height: 12px;
    }
  }
  .volume-icon {
    height: 15px;
  }

  .volume-inner-wrapper {
    position: absolute;
    top: -82px;
    left: -55px;

    display: flex;
    visibility: hidden;
    flex: 1;

    min-width: 100px;
    height: 14px;
    padding: 10px;

    transition: visibility .2s, opacity .2s, display .2s;
    transform: rotate(-90deg);

    opacity: 0;
    border-radius: 5px;
    background-color: rgba(0, 0, 0, .5);
    .volume-input-wrapper {
      width: 100px;

      .volume-level {
        width: 100px;
        margin-left: 10px;
      }
    }
  }

  &:hover {
    .volume-inner-wrapper {
      visibility: visible;

      opacity: 1;
    }

    .volume-icon {
      opacity: 1;
    }
  }
}

